--- a/0.start/0-1.PCA.ipynb
+++ b/0.start/0-1.PCA.ipynb
@@ -339,7 +339,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x19676c30148>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x2ba6a226d08>"
       ]
      },
      "execution_count": 5,
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,6 +407,43 @@
     "s = std_X.T @  (np.eye(n) - o/n) @ std_X\n",
     "s /= (n-1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # ## 위 방법을 모르는 경우\n",
+    "# # # 1. 평균 벡터를 만든다\n",
+    "# # # 2. 삼중 for문을 돌면서 값을 구한다.\n",
+    "\n",
+    "# # # 카카오 인턴 예시 코드\n",
+    "# for i in range(1, len(r_bar)):\n",
+    "#     temp_total = sum(mat[i])\n",
+    "#     temp_no_r = mat[i].count(0) - 1\n",
+    "#     temp = (temp_total / (n_i - temp_no_r))\n",
+    "#     r_bar[i] = round((temp_total / (n_i - temp_no_r)), 3)\n",
+    "\n",
+    "# for i in range(1, n_u + 1):\n",
+    "#     for j in range(1, n_u + 1):\n",
+    "#         if i != j:\n",
+    "#             f1 = 0\n",
+    "#             f2 = 0\n",
+    "#             f3 = 0\n",
+    "#             for k in range(1, n_i + 1):\n",
+    "#                 if mat[i][k] != 0 and mat[j][k] != 0:\n",
+    "#                     f1 += (mat[i][k] - r_bar[i]) * (mat[j][k] - r_bar[j])\n",
+    "#                     f2 += (mat[i][k] - r_bar[i]) ** 2\n",
+    "#                     f3 += (mat[j][k] - r_bar[j]) ** 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
