--- a/1.clustering/1-4. practice.ipynb
+++ b/1.clustering/1-4. practice.ipynb
@@ -28,51 +28,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "# d = pd.read_csv('../titanic/train.csv')\n",
+    "# d = pd.read_csv('../data/titanic/train.csv')\n",
     "\n",
     "# d = d.drop(['Cabin', 'Ticket', 'Name'], axis=1)\n",
     "# data = d.dropna(axis=0)\n",
-    "# data.to_csv('titanic.csv', index=False)"
+    "# # data.to_csv('titanic.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "data = pd.read_csv('titanic.csv')\n",
     "\n",
-    "# target = data['Survived']\n",
-    "# data = data.drop(['PassengerId', 'Survived'], axis=1)\n",
+    "target = data['Survived']\n",
+    "data = data.drop(['PassengerId', 'Survived'], axis=1)\n",
     "\n",
-    "# def sex(a):\n",
-    "#     if a == 'male':\n",
-    "#         return 0\n",
-    "#     else:\n",
-    "#         return 1\n",
+    "def sex(a):\n",
+    "    if a == 'male':\n",
+    "        return 0\n",
+    "    else:\n",
+    "        return 1\n",
     "    \n",
-    "# def emb(a):\n",
-    "#     if a == 'S':\n",
-    "#         return 0\n",
-    "#     elif a == 'Q':\n",
-    "#         return 1\n",
-    "#     else:\n",
-    "#         return 2\n",
+    "def emb(a):\n",
+    "    if a == 'S':\n",
+    "        return 0\n",
+    "    elif a == 'Q':\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return 2\n",
     "    \n",
-    "# data['Sex'] = data['Sex'].map(sex)\n",
-    "# data['Embarked'] = data['Embarked'].map(emb)"
+    "data['Sex'] = data['Sex'].map(sex)\n",
+    "data['Embarked'] = data['Embarked'].map(emb)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -80,10 +80,10 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x266b97e0be0>"
+       "<seaborn.axisgrid.PairGrid at 0x258970062b0>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -106,16 +106,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x266bb2500f0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x25899a7e828>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -138,16 +138,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x266bb96a748>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x25899a5ce10>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -170,16 +170,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x266bb17ef28>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x2589a2658d0>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -202,16 +202,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x266bbaa48d0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x2589a304710>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -234,16 +234,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x266bbb077b8>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x2589a3afc18>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
