--- a/2.classification/2-5. tree2(bagging).ipynb
+++ b/2.classification/2-5. tree2(bagging).ipynb
@@ -119,7 +119,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.7570093457943925\n"
+      "0.7616822429906542\n"
      ]
     }
    ],
@@ -164,7 +164,7 @@
      "text": [
       "lr:  0.7990654205607477\n",
       "knn:  0.6915887850467289\n",
-      "tree:  0.6869158878504673\n"
+      "tree:  0.6962616822429907\n"
      ]
     }
    ],
@@ -214,7 +214,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x15579a6e508>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1326215d788>"
       ]
      },
      "execution_count": 9,
@@ -258,7 +258,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.794392523364486\n"
+      "0.7990654205607477\n"
      ]
     }
    ],
