custom loss and metric example in NN

--- a/2.classification/2-9.NN.ipynb
+++ b/2.classification/2-9.NN.ipynb
@@ -112,7 +112,7 @@
    "source": [
     "## compile 한다.\n",
     "\n",
-    "model.compile(optimizer = optimizers.Adam(lr=0.1),\n",
+    "model.compile(optimizer = optimizers.Adam(lr=0.01),\n",
     "             loss='binary_crossentropy',\n",
     "             metrics=['acc'])"
    ]
@@ -123,16 +123,77 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## callback 함수를 쓴다면 추가\n",
-    "from keras.callbacks import EarlyStopping, ModelCheckpoint\n",
+    "# ## custom loss\n",
+    "# from keras import backend as K\n",
+    "# import tensorflow as tf\n",
     "\n",
-    "cp = ModelCheckpoint('best_model.h5', monitor='val_acc', mode='max', save_best_only=True)\n",
-    "es = EarlyStopping(monitor='val_acc', patience=10, restore_best_weights=True, verbose=1)"
+    "# def focal_loss(gamma=2., alpha=.25):\n",
+    "#     def focal_loss_fixed(y_true, y_pred):\n",
+    "#         pt_1 = tf.where(tf.equal(y_true, 1), y_pred, tf.ones_like(y_pred))\n",
+    "#         pt_0 = tf.where(tf.equal(y_true, 0), y_pred, tf.zeros_like(y_pred))\n",
+    "#         return -K.mean(alpha * K.pow(1. - pt_1, gamma) * K.log(pt_1)) - K.mean((1 - alpha) * K.pow(pt_0, gamma) * K.log(1. - pt_0))\n",
+    "#     return focal_loss_fixed\n",
+    "# ## cunstom metric\n",
+    "\n",
+    "# def f1(y_true, y_pred):\n",
+    "#     def recall(y_true, y_pred):\n",
+    "#         \"\"\"Recall metric.\n",
+    "\n",
+    "#         Only computes a batch-wise average of recall.\n",
+    "\n",
+    "#         Computes the recall, a metric for multi-label classification of\n",
+    "#         how many relevant items are selected.\n",
+    "#         \"\"\"\n",
+    "#         true_positives = K.sum(K.round(K.clip(y_true * y_pred, 0, 1)))\n",
+    "#         possible_positives = K.sum(K.round(K.clip(y_true, 0, 1)))\n",
+    "#         recall = true_positives / (possible_positives + K.epsilon())\n",
+    "#         return recall\n",
+    "\n",
+    "#     def precision(y_true, y_pred):\n",
+    "#         \"\"\"Precision metric.\n",
+    "\n",
+    "#         Only computes a batch-wise average of precision.\n",
+    "\n",
+    "#         Computes the precision, a metric for multi-label classification of\n",
+    "#         how many selected items are relevant.\n",
+    "#         \"\"\"\n",
+    "#         true_positives = K.sum(K.round(K.clip(y_true * y_pred, 0, 1)))\n",
+    "#         predicted_positives = K.sum(K.round(K.clip(y_pred, 0, 1)))\n",
+    "#         precision = true_positives / (predicted_positives + K.epsilon())\n",
+    "#         return precision\n",
+    "#     precision = precision(y_true, y_pred)\n",
+    "#     recall = recall(y_true, y_pred)\n",
+    "#     return 2*((precision*recall)/(precision+recall+K.epsilon()))\n",
+    "# custom_loss = focal_loss()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# model.compile(optimizer = optimizers.Adam(lr=0.1),\n",
+    "#              loss= custom_loss,\n",
+    "#              metrics=['acc'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## callback 함수를 쓴다면 추가\n",
+    "from keras.callbacks import EarlyStopping, ModelCheckpoint\n",
+    "\n",
+    "cp = ModelCheckpoint('best_model.h5', monitor='val_loss', mode='min', save_best_only=True)\n",
+    "es = EarlyStopping(monitor='val_loss', patience=20, restore_best_weights=True, verbose=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -142,51 +203,67 @@
      "output_type": "stream",
      "text": [
       "Train on 348 samples, validate on 150 samples\n",
-      "Epoch 1/40\n",
-      "348/348 [==============================] - 1s 2ms/step - loss: 0.6948 - acc: 0.7241 - val_loss: 0.4506 - val_acc: 0.8267\n",
-      "Epoch 2/40\n",
-      "348/348 [==============================] - 0s 143us/step - loss: 0.4975 - acc: 0.7730 - val_loss: 0.5426 - val_acc: 0.7600\n",
-      "Epoch 3/40\n",
-      "348/348 [==============================] - 0s 201us/step - loss: 0.5055 - acc: 0.8103 - val_loss: 0.4855 - val_acc: 0.7800\n",
-      "Epoch 4/40\n",
-      "348/348 [==============================] - 0s 163us/step - loss: 0.4590 - acc: 0.7787 - val_loss: 0.5110 - val_acc: 0.8067\n",
-      "Epoch 5/40\n",
-      "348/348 [==============================] - 0s 186us/step - loss: 0.4269 - acc: 0.8190 - val_loss: 0.4496 - val_acc: 0.8067\n",
-      "Epoch 6/40\n",
-      "348/348 [==============================] - 0s 193us/step - loss: 0.4110 - acc: 0.8103 - val_loss: 0.4342 - val_acc: 0.8200\n",
-      "Epoch 7/40\n",
-      "348/348 [==============================] - 0s 192us/step - loss: 0.3921 - acc: 0.8103 - val_loss: 0.4173 - val_acc: 0.8333\n",
-      "Epoch 8/40\n",
-      "348/348 [==============================] - 0s 181us/step - loss: 0.3901 - acc: 0.8391 - val_loss: 0.4520 - val_acc: 0.8067\n",
-      "Epoch 9/40\n",
-      "348/348 [==============================] - 0s 203us/step - loss: 0.3717 - acc: 0.8132 - val_loss: 0.4585 - val_acc: 0.8133\n",
-      "Epoch 10/40\n",
-      "348/348 [==============================] - 0s 190us/step - loss: 0.3535 - acc: 0.8420 - val_loss: 0.4355 - val_acc: 0.8333\n",
-      "Epoch 11/40\n",
-      "348/348 [==============================] - 0s 218us/step - loss: 0.3367 - acc: 0.8391 - val_loss: 0.4850 - val_acc: 0.7667\n",
-      "Epoch 12/40\n",
-      "348/348 [==============================] - 0s 169us/step - loss: 0.3587 - acc: 0.8563 - val_loss: 0.4801 - val_acc: 0.7733\n",
-      "Epoch 13/40\n",
-      "348/348 [==============================] - 0s 198us/step - loss: 0.3464 - acc: 0.8592 - val_loss: 0.4836 - val_acc: 0.8200\n",
-      "Epoch 14/40\n",
-      "348/348 [==============================] - 0s 183us/step - loss: 0.3822 - acc: 0.8276 - val_loss: 0.5792 - val_acc: 0.7467\n",
-      "Epoch 15/40\n",
-      "348/348 [==============================] - 0s 149us/step - loss: 0.3663 - acc: 0.8247 - val_loss: 0.4614 - val_acc: 0.8200\n",
-      "Epoch 16/40\n",
-      "348/348 [==============================] - 0s 246us/step - loss: 0.3679 - acc: 0.8276 - val_loss: 0.4422 - val_acc: 0.8200\n",
-      "Epoch 17/40\n",
-      "348/348 [==============================] - 0s 192us/step - loss: 0.3451 - acc: 0.8333 - val_loss: 0.5504 - val_acc: 0.8067\n",
+      "Epoch 1/100\n",
+      "348/348 [==============================] - 1s 2ms/step - loss: 0.5942 - acc: 0.6897 - val_loss: 0.5091 - val_acc: 0.7667\n",
+      "Epoch 2/100\n",
+      "348/348 [==============================] - ETA: 0s - loss: 0.4096 - acc: 0.843 - 0s 186us/step - loss: 0.4567 - acc: 0.7989 - val_loss: 0.4551 - val_acc: 0.8067\n",
+      "Epoch 3/100\n",
+      "348/348 [==============================] - 0s 166us/step - loss: 0.4188 - acc: 0.8247 - val_loss: 0.4422 - val_acc: 0.8000\n",
+      "Epoch 4/100\n",
+      "348/348 [==============================] - 0s 209us/step - loss: 0.4002 - acc: 0.8333 - val_loss: 0.4489 - val_acc: 0.8000\n",
+      "Epoch 5/100\n",
+      "348/348 [==============================] - 0s 195us/step - loss: 0.3837 - acc: 0.8563 - val_loss: 0.4168 - val_acc: 0.8067\n",
+      "Epoch 6/100\n",
+      "348/348 [==============================] - 0s 198us/step - loss: 0.3818 - acc: 0.8362 - val_loss: 0.4258 - val_acc: 0.8200\n",
+      "Epoch 7/100\n",
+      "348/348 [==============================] - 0s 201us/step - loss: 0.3674 - acc: 0.8362 - val_loss: 0.4431 - val_acc: 0.8133\n",
+      "Epoch 8/100\n",
+      "348/348 [==============================] - 0s 186us/step - loss: 0.3610 - acc: 0.8477 - val_loss: 0.4370 - val_acc: 0.8200\n",
+      "Epoch 9/100\n",
+      "348/348 [==============================] - 0s 186us/step - loss: 0.3531 - acc: 0.8506 - val_loss: 0.4517 - val_acc: 0.8267\n",
+      "Epoch 10/100\n",
+      "348/348 [==============================] - 0s 198us/step - loss: 0.3485 - acc: 0.8534 - val_loss: 0.4438 - val_acc: 0.8267\n",
+      "Epoch 11/100\n",
+      "348/348 [==============================] - 0s 163us/step - loss: 0.3423 - acc: 0.8563 - val_loss: 0.4816 - val_acc: 0.7933\n",
+      "Epoch 12/100\n",
+      "348/348 [==============================] - 0s 203us/step - loss: 0.3343 - acc: 0.8563 - val_loss: 0.4440 - val_acc: 0.8133\n",
+      "Epoch 13/100\n",
+      "348/348 [==============================] - 0s 206us/step - loss: 0.3374 - acc: 0.8563 - val_loss: 0.5037 - val_acc: 0.7867\n",
+      "Epoch 14/100\n",
+      "348/348 [==============================] - 0s 186us/step - loss: 0.3202 - acc: 0.8649 - val_loss: 0.4447 - val_acc: 0.8200\n",
+      "Epoch 15/100\n",
+      "348/348 [==============================] - 0s 241us/step - loss: 0.3172 - acc: 0.8563 - val_loss: 0.5041 - val_acc: 0.8000\n",
+      "Epoch 16/100\n",
+      "348/348 [==============================] - 0s 181us/step - loss: 0.3149 - acc: 0.8707 - val_loss: 0.4697 - val_acc: 0.7933\n",
+      "Epoch 17/100\n",
+      "348/348 [==============================] - 0s 201us/step - loss: 0.2985 - acc: 0.8707 - val_loss: 0.5174 - val_acc: 0.7867\n",
+      "Epoch 18/100\n",
+      "348/348 [==============================] - 0s 224us/step - loss: 0.2956 - acc: 0.8822 - val_loss: 0.4687 - val_acc: 0.8067\n",
+      "Epoch 19/100\n",
+      "348/348 [==============================] - 0s 238us/step - loss: 0.2949 - acc: 0.8764 - val_loss: 0.4996 - val_acc: 0.7867\n",
+      "Epoch 20/100\n",
+      "348/348 [==============================] - 0s 198us/step - loss: 0.2961 - acc: 0.8678 - val_loss: 0.5194 - val_acc: 0.7867\n",
+      "Epoch 21/100\n",
+      "348/348 [==============================] - 0s 189us/step - loss: 0.2969 - acc: 0.8764 - val_loss: 0.4946 - val_acc: 0.7667\n",
+      "Epoch 22/100\n",
+      "348/348 [==============================] - 0s 172us/step - loss: 0.2860 - acc: 0.8764 - val_loss: 0.5290 - val_acc: 0.7867\n",
+      "Epoch 23/100\n",
+      "348/348 [==============================] - 0s 201us/step - loss: 0.2826 - acc: 0.8764 - val_loss: 0.5411 - val_acc: 0.7667\n",
+      "Epoch 24/100\n",
+      "348/348 [==============================] - 0s 198us/step - loss: 0.2951 - acc: 0.8851 - val_loss: 0.5219 - val_acc: 0.7800\n",
+      "Epoch 25/100\n",
+      "348/348 [==============================] - 0s 195us/step - loss: 0.2820 - acc: 0.8822 - val_loss: 0.5420 - val_acc: 0.7733\n",
       "Restoring model weights from the end of the best epoch\n",
-      "Epoch 00017: early stopping\n"
+      "Epoch 00025: early stopping\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.callbacks.History at 0x1e5e8f6ae08>"
+       "<keras.callbacks.callbacks.History at 0x20421666448>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,21 +271,21 @@
    "source": [
     "## 훈련시킨다.\n",
     "model.fit(tt, train_y,\n",
-    "         epochs=40,\n",
+    "         epochs=100,\n",
     "         validation_split=0.3,\n",
     "         callbacks=[cp, es])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.8271028037383178\n"
+      "0.794392523364486\n"
      ]
     }
    ],
@@ -226,23 +303,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "214/214 [==============================] - 0s 84us/step\n"
+      "214/214 [==============================] - 0s 98us/step\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[0.47494250452407055, 0.827102780342102]"
+       "[0.47600608423491503, 0.7943925261497498]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -264,46 +341,60 @@
      "text": [
       "Train on 348 samples, validate on 150 samples\n",
       "Epoch 1/40\n",
-      "348/348 [==============================] - 0s 516us/step - loss: 0.5818 - acc: 0.7126 - val_loss: 0.4872 - val_acc: 0.7533\n",
+      "348/348 [==============================] - 0s 507us/step - loss: 0.5309 - acc: 0.7529 - val_loss: 0.4841 - val_acc: 0.7600\n",
       "Epoch 2/40\n",
-      "348/348 [==============================] - 0s 189us/step - loss: 0.5967 - acc: 0.7213 - val_loss: 0.4958 - val_acc: 0.7600\n",
+      "348/348 [==============================] - 0s 203us/step - loss: 0.4511 - acc: 0.7845 - val_loss: 0.4655 - val_acc: 0.7867\n",
       "Epoch 3/40\n",
-      "348/348 [==============================] - 0s 206us/step - loss: 0.4994 - acc: 0.7241 - val_loss: 0.4719 - val_acc: 0.7667\n",
+      "348/348 [==============================] - 0s 172us/step - loss: 0.4117 - acc: 0.8161 - val_loss: 0.4952 - val_acc: 0.8000\n",
       "Epoch 4/40\n",
-      "348/348 [==============================] - 0s 206us/step - loss: 0.4858 - acc: 0.8103 - val_loss: 0.4905 - val_acc: 0.7800\n",
+      "348/348 [==============================] - 0s 178us/step - loss: 0.4155 - acc: 0.8305 - val_loss: 0.5059 - val_acc: 0.8200\n",
       "Epoch 5/40\n",
-      "348/348 [==============================] - 0s 149us/step - loss: 0.4388 - acc: 0.8333 - val_loss: 0.4988 - val_acc: 0.7867\n",
+      "348/348 [==============================] - 0s 186us/step - loss: 0.3922 - acc: 0.8132 - val_loss: 0.4778 - val_acc: 0.7800\n",
       "Epoch 6/40\n",
-      "348/348 [==============================] - 0s 152us/step - loss: 0.4366 - acc: 0.8132 - val_loss: 0.4805 - val_acc: 0.7467\n",
+      "348/348 [==============================] - 0s 189us/step - loss: 0.4070 - acc: 0.8420 - val_loss: 0.5031 - val_acc: 0.8000\n",
       "Epoch 7/40\n",
-      "348/348 [==============================] - 0s 232us/step - loss: 0.4176 - acc: 0.8420 - val_loss: 0.5312 - val_acc: 0.7600\n",
+      "348/348 [==============================] - 0s 199us/step - loss: 0.3990 - acc: 0.8305 - val_loss: 0.5799 - val_acc: 0.7533\n",
       "Epoch 8/40\n",
-      "348/348 [==============================] - 0s 209us/step - loss: 0.4276 - acc: 0.8247 - val_loss: 0.5100 - val_acc: 0.7467\n",
+      "348/348 [==============================] - 0s 198us/step - loss: 0.3754 - acc: 0.8420 - val_loss: 0.4927 - val_acc: 0.8400\n",
       "Epoch 9/40\n",
-      "348/348 [==============================] - 0s 186us/step - loss: 0.4198 - acc: 0.8161 - val_loss: 0.4980 - val_acc: 0.7333\n",
+      "348/348 [==============================] - 0s 202us/step - loss: 0.3563 - acc: 0.8305 - val_loss: 0.5054 - val_acc: 0.8467\n",
       "Epoch 10/40\n",
-      "348/348 [==============================] - 0s 192us/step - loss: 0.4049 - acc: 0.8305 - val_loss: 0.4901 - val_acc: 0.7533\n",
+      "348/348 [==============================] - 0s 189us/step - loss: 0.3524 - acc: 0.8190 - val_loss: 0.5080 - val_acc: 0.8333\n",
       "Epoch 11/40\n",
-      "348/348 [==============================] - 0s 175us/step - loss: 0.3960 - acc: 0.8218 - val_loss: 0.4905 - val_acc: 0.7733\n",
+      "348/348 [==============================] - 0s 183us/step - loss: 0.3351 - acc: 0.8621 - val_loss: 0.5672 - val_acc: 0.8000\n",
       "Epoch 12/40\n",
-      "348/348 [==============================] - 0s 172us/step - loss: 0.3753 - acc: 0.8276 - val_loss: 0.4885 - val_acc: 0.7467\n",
+      "348/348 [==============================] - 0s 215us/step - loss: 0.3652 - acc: 0.8420 - val_loss: 0.5345 - val_acc: 0.7533\n",
       "Epoch 13/40\n",
-      "348/348 [==============================] - 0s 164us/step - loss: 0.3791 - acc: 0.8305 - val_loss: 0.5066 - val_acc: 0.7600\n",
+      "348/348 [==============================] - 0s 152us/step - loss: 0.3843 - acc: 0.8305 - val_loss: 0.5174 - val_acc: 0.7600\n",
       "Epoch 14/40\n",
-      "348/348 [==============================] - 0s 198us/step - loss: 0.3696 - acc: 0.8362 - val_loss: 0.5359 - val_acc: 0.7400\n",
+      "348/348 [==============================] - 0s 198us/step - loss: 0.3924 - acc: 0.8362 - val_loss: 0.4769 - val_acc: 0.7933\n",
       "Epoch 15/40\n",
-      "348/348 [==============================] - 0s 181us/step - loss: 0.4201 - acc: 0.8103 - val_loss: 0.5581 - val_acc: 0.6533\n",
+      "348/348 [==============================] - 0s 165us/step - loss: 0.3220 - acc: 0.8707 - val_loss: 0.5591 - val_acc: 0.7800\n",
+      "Epoch 16/40\n",
+      "348/348 [==============================] - 0s 183us/step - loss: 0.3245 - acc: 0.8649 - val_loss: 0.5489 - val_acc: 0.7933\n",
+      "Epoch 17/40\n",
+      "348/348 [==============================] - 0s 195us/step - loss: 0.3186 - acc: 0.8736 - val_loss: 0.5268 - val_acc: 0.7933\n",
+      "Epoch 18/40\n",
+      "348/348 [==============================] - 0s 212us/step - loss: 0.3256 - acc: 0.8534 - val_loss: 0.7406 - val_acc: 0.5933\n",
+      "Epoch 19/40\n",
+      "348/348 [==============================] - 0s 209us/step - loss: 0.3454 - acc: 0.8132 - val_loss: 0.6152 - val_acc: 0.8333\n",
+      "Epoch 20/40\n",
+      "348/348 [==============================] - 0s 123us/step - loss: 0.3722 - acc: 0.8333 - val_loss: 0.5372 - val_acc: 0.8467\n",
+      "Epoch 21/40\n",
+      "348/348 [==============================] - 0s 203us/step - loss: 0.3630 - acc: 0.8333 - val_loss: 0.5750 - val_acc: 0.8400\n",
+      "Epoch 22/40\n",
+      "348/348 [==============================] - 0s 201us/step - loss: 0.3184 - acc: 0.8448 - val_loss: 0.6053 - val_acc: 0.8400\n",
       "Restoring model weights from the end of the best epoch\n",
-      "Epoch 00015: early stopping\n"
+      "Epoch 00022: early stopping\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.callbacks.History at 0x1e715994d48>"
+       "<keras.callbacks.callbacks.History at 0x205944cfe08>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
